<resources>
    <string name="app_name">ChirpNTweet</string>
    <string name="login">Connect with Twitter</string>
    <string name="connection_error">Check your internet Connection</string>
    <string name="user_info_error">Error getting user info !</string>
    <string name="error_fetch">Error fetching tweets !</string>
    <string name="reply">reply</string>
    <string name="reply_success">Tweet reply success</string>
    <string name="reply_failed">Tweet reply failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="twitter_logo">Twitter Logo</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="other">Other</string>
    <string name="help_center">Help Center</string>
    <string name="lists">lists</string>
    <string name="connect">Connect</string>
    <string name="logout">Logout</string>
    <string name="tab_home">HOME</string>
    <string name="tab_mentions">MENTIONS</string>
    <string name="tab_tweets">TWEETS</string>
    <string name="tab_photos">PHOTOS</string>
    <string name="tab_favorites">FAVORITES</string>
</resources>
