<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/messages"
            android:icon="@drawable/messages"
            android:title="@string/messages" />

        <item
            android:id="@+id/lists"
            android:icon="@drawable/lists"
            android:title="@string/lists" />

        <item
            android:id="@+id/connect"
            android:icon="@drawable/connect"
            android:title="@string/connect" />
    </group>

    <group>
        <item
            android:id="@+id/helpCenter"
            android:title="@string/help_center" />
    </group>

</menu>